Fixed fadein, fixed stretch

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -302,6 +302,7 @@ h1, h2, h3 {
 
   img {
     width: 300px;
+    max-height: 300px;
     border-radius: 50%;
     border: #DCD0D0 5px solid;
     padding: 5px;
